[metadata]
name = x22223673_ewarranty_management
version = 0.0.2
author = Venky.dbl
author_email = venky.dbl@gmail.com
description = Electronic Warranty Management System Library 
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url=https://github.com/venky.dbl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
